# appcoins-sdk

./: .gitignore  README.md  build.gradle  crowdin.yml  gradle.properties  makefile  settings.gradle
android-appcoins-billing/: .gitignore  build.gradle  proguard-rules.pro
android-appcoins-billing/src/debug/: AndroidManifest.xml
android-appcoins-billing/src/main/: AndroidManifest.xml
android-appcoins-billing/src/main/aidl/com/appcoins/billing/: AppcoinsBilling.aidl
android-appcoins-billing/src/main/assets/appcoins-wallet/resources/translations/values-ar/: external_strings.xml
android-appcoins-billing/src/main/assets/appcoins-wallet/resources/translations/values-bg/: external_strings.xml
android-appcoins-billing/src/main/assets/appcoins-wallet/resources/translations/values-de/: external_strings.xml
android-appcoins-billing/src/main/assets/appcoins-wallet/resources/translations/values-el/: external_strings.xml
android-appcoins-billing/src/main/assets/appcoins-wallet/resources/translations/values-es/: external_strings.xml
android-appcoins-billing/src/main/cpp/: CMakeLists.txt  native-keys-storer.cpp  native-keys-storer.h
android-appcoins-billing/src/main/java/com/appcoins/sdk/billing/: AppcoinsBillingClient.java  (+18 more)
android-appcoins-billing/src/main/res/drawable/: close_x.xml  round_corners_background.xml  update_button_background.xml  wallet_logo_white.xml  yellow_rounded_button_background.xml
android-appcoins-billing/src/main/res/layout/: transparent_activity.xml  unavailable_billing_dialog_activity.xml  update_dialog_activity.xml  web_payment_activity.xml
android-appcoins-billing/src/main/res/layout-land/: unavailable_billing_dialog_activity.xml  update_dialog_activity.xml  web_payment_activity.xml
android-appcoins-billing/src/main/res/layout-sw640dp/: web_payment_activity.xml
android-appcoins-billing/src/main/res/values/: attrs.xml  colors.xml  strings.xml  styles.xml  themes.xml
android-appcoins-billing/src/main/res/values-ar-rSA/: strings.xml
android-appcoins-billing/src/main/res/values-bg/: strings.xml
android-appcoins-billing/src/main/res/values-bn-rBD/: strings.xml
android-appcoins-billing/src/main/res/values-de-rDE/: strings.xml
android-appcoins-billing/src/main/res/values-el-rGR/: strings.xml
android-appcoins-billing/src/main/res/values-es/: strings.xml
android-appcoins-billing/src/main/res/values-fa-rIR/: strings.xml
android-appcoins-billing/src/main/res/values-fr-rFR/: strings.xml
android-appcoins-billing/src/main/res/values-hi-rIN/: strings.xml
android-appcoins-billing/src/main/res/values-hr-rHR/: strings.xml
android-appcoins-billing/src/main/res/values-hu-rHU/: strings.xml
android-appcoins-billing/src/main/res/values-in-rID/: strings.xml
android-appcoins-billing/src/main/res/values-it-rIT/: strings.xml
android-appcoins-billing/src/main/res/values-ja-rJP/: strings.xml
android-appcoins-billing/src/main/res/values-ko-rKR/: strings.xml
android-appcoins-billing/src/main/res/values-mr-rIN/: strings.xml
android-appcoins-billing/src/main/res/values-ms-rMY/: strings.xml
android-appcoins-billing/src/main/res/values-my-rMM/: strings.xml
android-appcoins-billing/src/main/res/values-night/: colors.xml  styles.xml
android-appcoins-billing/src/main/res/values-nl-rNL/: strings.xml
android-appcoins-billing/src/main/res/values-pa-rIN/: strings.xml
android-appcoins-billing/src/main/res/values-pl-rPL/: strings.xml
android-appcoins-billing/src/main/res/values-pt-rBR/: strings.xml
android-appcoins-billing/src/main/res/values-pt-rPT/: strings.xml
android-appcoins-billing/src/main/res/values-ro-rRO/: strings.xml
android-appcoins-billing/src/main/res/values-ru-rRU/: strings.xml
android-appcoins-billing/src/main/res/values-sr/: strings.xml
android-appcoins-billing/src/main/res/values-sw600dp/: attrs.xml
android-appcoins-billing/src/main/res/values-th-rTH/: strings.xml
android-appcoins-billing/src/main/res/values-tr-rTR/: strings.xml
android-appcoins-billing/src/main/res/values-uk-rUA/: strings.xml
android-appcoins-billing/src/main/res/values-vi-rVN/: strings.xml
android-appcoins-billing/src/main/res/values-zh-rCN/: strings.xml
android-appcoins-billing/src/main/res/values-zh-rTW/: strings.xml
android-appcoins-billing/src/test/java/com/sdk/appcoins_adyen/: AddressResponseMapperTest.java
appcoins/: build.gradle
appcoins-ads/: build.gradle
appcoins-adyen/: build.gradle
appcoins-billing/: build.gradle  proguard-rules.pro
appcoins-billing/src/main/: AndroidManifest.xml
appcoins-contract-proxy/: build.gradle
appcoins-core/: build.gradle  proguard-rules.pro
appcoins-core/src/main/: AndroidManifest.xml
appcoins-in-game-updates/: build.gradle
appcoins-in-game-updates/src/main/: AndroidManifest.xml
appcoins-lifecycle/: build.gradle
communication/: build.gradle
communication/src/main/java/com/appcoins/communication/: MessageProcessorActivity.java  ProcessedValueReturner.java  SyncIpcMessageRequester.java
communication/src/test/java/com/appcoins/communication/: ProcessedValueReturnerTest.kt
config/checkstyle/: checkstyle.xml
config/detekt/: detekt.yml
docs/: pull-request-template.md
gradle/: android.gradle  checkstyle.gradle  libs.versions.toml  publish.gradle
gradle/wrapper/: gradle-wrapper.properties
hooks/: pre-commit  pre-push
scripts/: do_new_release.py  publish.sh  publishDebugToMavenLocal.sh  publishDebugToSonatype.sh  publishReleaseToMavenLocal.sh  publishReleaseToSonatype.sh  publishStagingToSonatype.sh  publish_dev.sh  publish_staging.sh
toolbox/: build.gradle
toolbox/src/main/: AndroidManifest.xml
toolbox/src/main/res/layout/: activity_main.xml
toolbox/src/main/res/values/: strings.xml
(+460 files in other folders)
